syntax = "proto3";
option java_multiple_files = true;
package exam.paymentsystem;

message PaymentRequest {
  string orderId = 1;
  string orderPrice = 2;
}

message PaymentResponse {
  string response = 1;
}

service PaymentService {
  rpc payment(PaymentRequest) returns (PaymentResponse);
}